--- a/style.css
+++ b/style.css
@@ -96,7 +96,10 @@ article {
   article p {
     display: block;
     margin-top: 3%;
+    max-height: 100px;
     overflow: scroll; }
+  article p::-webkit-scrollbar {
+    display: none; }
   article h1, article .vote {
     display: inline-block;
     font-size: 25px; }
@@ -126,6 +129,8 @@ footer {
     overflow: scroll; }
     .comments ul li {
       margin-top: 8px; }
+  .comments ul::-webkit-scrollbar {
+    display: none; }
 
 .makecomment * {
   margin-top: 5px;
