--- a/sass/_submit.scss
+++ b/sass/_submit.scss
@@ -12,7 +12,7 @@
     border-radius: 20px;
     animation-duration: .2s;
     animation-name: grow;
-    input {
+    input:hover {
       height: 20px;
     }
     input, textarea {
